--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,110 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+
+section {
+    padding: 2em 0;
+    text-align: center;
+}
+
+.header-nav{
+    padding: 0;
+    height: auto;
+    z-index: 999;
+    position: fixed;
+    width: 100%;
+    font-family: 'Fredericka the Great', cursive;
+}
+
+.nav-text-size {
+    font-size: 1.5rem!important;
+}
+
+.navTitle-text-size{
+    font-size: 2.5rem!important;
+}
+//HOME PAGE -- SECTION VIDEO
+#nomad_family {
+    width: 100%;
+    height: 100vh;
+    position: Relative;
+    padding: 0;
+    overflow: hidden;
+}
+
+#nomad_family h2{
+    position: absolute;
+    top: 35%;
+    text-align: center;
+    z-index: 1;
+    width: 100%;
+    color: #fff;
+    font-family: 'Fredericka the Great', cursive;
+    // font-family: 'Kaushan Script', cursive;
+    font-size: 5em;
+}
+
+#nomad_family p{
+    position: absolute;
+    top: 45%;
+    text-align: center;
+    z-index: 1;
+    width: 100%;
+    color: #fff;
+    font-family: 'Fredericka the Great', cursive;
+    // font-family: 'Kaushan Script', cursive;
+    font-size: 3em;
+}
+
+.video-audio {
+    position: absolute;
+    top: 80px;
+    right: 10px;
+    color: #FFF !important;
+    font-size: 25px;
+    z-index: 9999;
+}
+
+.intro-video {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.video-audio i {
+    color: #FFF !important;
+    font-size: 25px;
+}
+
+
+//HOME PAGE -- BLOG 4 LAST ARTICLES
+.event-wrapper {
+    width: 100%;
+    // height: 180px;
+    // outline: 1px red solid;
+    margin: 10px 0;
+    position: relative;
+    overflow: hidden;
+
+}
+.event-intro {
+    text-align: justify;
+}
+
+.ml3 {
+    font-weight: 900;
+    font-size: 3.5em;
+  }
+
+  .ml12 {
+    font-weight: 200;
+    font-size: 1.8em;
+    text-transform: uppercase;
+    letter-spacing: 0.5em;
+  }
+
+  .ml12 .letter {
+    display: inline-block;
+    line-height: 1em;
+  }
