--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10672,6 +10672,14 @@ section {
   font-size: 2.5rem !important;
 }
 
+@media (max-width: 375px) {
+  /* CSS mobile ici */
+
+  .navTitle-text-size {
+    font-size: 2rem !important;
+  }
+}
+
 #nomad_family {
   width: 100%;
   height: 100vh;
@@ -10723,20 +10731,44 @@ section {
   font-size: 25px;
 }
 
+@media (max-width: 375px) {
+  /* CSS mobile ici */
+
+  .video-audio i {
+    display: none;
+  }
+}
+
 .button_home {
   position: absolute;
-  bottom: 6em;
+  bottom: 4em;
   left: 40%;
   right: 40%;
   color: #FFF !important;
   font-size: 50px !important;
-  z-index: 9999;
   font-family: "Fredericka the Great", cursive;
+}
+
+@media (max-width: 375px) {
+  /* CSS mobile ici */
+
+  .button_home {
+    left: 25%;
+    bottom: 2em;
+  }
 }
 
 #events {
   margin-bottom: 8%;
   padding-top: 10%;
+}
+
+@media (max-width: 375px) {
+  /* CSS mobile ici */
+
+  #events {
+    padding-top: 25%;
+  }
 }
 
 .event-wrapper {
@@ -10775,6 +10807,14 @@ section {
   letter-spacing: 0.5em;
 }
 
+@media (max-width: 375px) {
+  /* CSS mobile ici */
+
+  .ml12 {
+    display: none;
+  }
+}
+
 .ml12 .letter {
   display: inline-block;
   line-height: 1em;
@@ -10786,8 +10826,8 @@ section {
 }
 
 .container-newsletter {
-  margin-top: 10%;
-  margin-bottom: 10%;
+  margin-top: 7%;
+  margin-bottom: 7%;
 }
 
 .h1-newsletter {
@@ -10868,6 +10908,17 @@ section {
   margin-top: 60px;
 }
 
+@media (max-width: 375px) {
+  /* CSS mobile ici */
+
+  .fa {
+    padding: 25px;
+    margin-right: 10px;
+    margin-left: 10px;
+    margin-top: 10px;
+  }
+}
+
 .fa:hover {
   opacity: 0.7;
 }
@@ -10885,11 +10936,5 @@ section {
 .fa-instagram {
   background: #bf13d2;
   color: white;
-}
-
-.fa-snapchat-ghost {
-  background: #fffc00;
-  color: white;
-  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
