--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -107,8 +107,7 @@ section {
 .button_home {
     position: absolute;
     bottom: 4em;
-    left: 40%;
-    right: 40%;
+    left: 43%;
     color: #FFF !important;
     font-size: 50px !important;
     // z-index: 9999;
@@ -125,7 +124,6 @@ section {
 
 //HOME PAGE -- BLOG 4 LAST ARTICLES
 #events {
-    margin-bottom: 8%;
     padding-top: 10%;
 }
 
@@ -147,15 +145,17 @@ section {
 }
 .event-intro {
     text-align: justify;
-    transition: transform .2s;
+    // transition: transform .2s;
+    transition: all 0.3s ease-out;
 }
 
 .event-intro:hover {
     background-color: #008cba;
     color: white;
-    transform: scale(1.15);
-    border-radius: 10px;
-    padding: 15px;
+    // transform: scale(1.15);
+    transform: translate(0px, -10px);
+    border-radius: 1px;
+    padding: 10px;
 }
 .event-intro:hover > a {
 
@@ -314,3 +314,30 @@ $primaryColor: #F53A54;
   }
 
 
+//ABOUT US
+
+.section_about_us
+{
+    padding-top: 110px;
+}
+
+
+//SECTION BLOG
+
+.section_blog
+{
+    padding-top: 110px;
+}
+
+
+//SECTION BLOG ARTICLE
+.section_blog_article
+{
+    padding-top: 110px;
+}
+
+.commentaire_input
+{
+    width: 100%;
+    border-radius: 5px;
+}
